fixed register accordion to be visible when scrolling

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -101,6 +101,7 @@ html {
 .accordion-body.ff-secondary {
     padding: 16px;
     background: #fff;
+    border-radius: 0 0 8px 8px;
 }
 .btn-outline-primary {
     background: none;
